# aegis-disaster-intel

./: .gitignore  Dockerfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: NOTES_phase0.md  NOTES_phase1.md  NOTES_phase2.md  NOTES_phase3.md
src/aegis/: __init__.py  geo.py  schema.py
src/aegis/ingest/: __init__.py  firms.py  nws.py  usgs.py
tests/: test_firms.py  test_geo.py  test_nws.py  test_schema.py  test_usgs.py
tests/fixtures/: firms_sample.csv  nws_sample.geojson  usgs_sample.geojson
