[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-disaster-intel"
version = "0.1.0"
description = "Event-driven disaster intelligence: live hazard feeds, agentic enrichment, geospatial risk, RAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Venkateswarlu Nagineni" }]
keywords = ["geospatial", "disaster", "langchain", "rag", "event-driven", "data-engineering"]

dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "httpx>=0.27",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14", "h3>=4.0", "shapely>=2.0"]
ai = ["langchain>=0.2", "langchain-community>=0.2", "faiss-cpu>=1.8", "sentence-transformers>=2.7"]
serve = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
